# hdl_people_tracking

./: README.md
hdl_people_tracking/: CMakeLists.txt  README.md  package.xml
hdl_people_tracking/apps/: hdl_people_detection_node.cpp  hdl_people_follow_target_node.cpp  hdl_people_tracking_node.cpp
hdl_people_tracking/include/hdl_people_detection/: kidono_feature_extractor.hpp  marcel_people_detector.hpp  people_detector.h
hdl_people_tracking/include/hdl_people_tracking/: people_tracker.hpp
hdl_people_tracking/include/kkl/ml/: svm_scale.hpp
hdl_people_tracking/launch/: hdl_people_tracking.launch.py
hdl_people_tracking/src/: people_detector.cpp
