<?xml version="1.0"?>
<package format="3">
  <name>hdl_people_tracking</name>
  <version>0.0.0</version>
  <description>The hdl_people_tracking package</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>hdl_people_tracking_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
